--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,7 @@ div.theThing {
     min-height:340px;
 }
 
+
 div.theThing .Smile {
     width:100%;
     min-height:250px;
@@ -30,8 +31,46 @@ div.theThing .Smile {
         position:relative;
         margin:8% auto 3% auto;
         height:20%;
-        width:30%;
+        width:50%;
         transition:all 1s ease;
+
+        &.size-10 {
+            width:100%;
+            .eye {min-height:80px;}
+        }
+        &.size-9 {
+            width:90%;
+            .eye {min-height:70px;}
+        }
+        &.size-8 {
+            width:80%;
+            .eye {min-height:65px;}
+        }
+        &.size-7 {
+            width:70%;
+            .eye {min-height:55px;}
+        }
+        &.size-6 {
+            width:60%;
+        }
+        &.size-5 {
+            width:50%;
+        }
+        &.size-4 {
+            width:40%;
+        } 
+        &.size-3 {
+            width:30%;
+            .eye {min-height:20px;}
+        } 
+        &.size-2 {
+            width:20%;
+            .eye {min-height:15px;}
+        } 
+        &.size-1 {
+            width:10%;
+            .eye {min-height:10px;}
+        } 
 
         div.eye {
             display:inline-block;
@@ -40,6 +79,7 @@ div.theThing .Smile {
             width:21%;
             min-height:30px;
             margin:0 5%;
+            transition:all 1s ease;
 
             &.left {
                 left:0;
@@ -48,45 +88,50 @@ div.theThing .Smile {
                 right:0;
             }
         }
-        &.eyes-10 {
-            width:100%;
-        }
-        &.eyes-9 {
-            width:90%;
-        }
-        &.eyes-8 {
-            width:80%;
-        }
-        &.eyes-7 {
-            width:70%;
-        }
-        &.eyes-6 {
-            width:60%;
-        }
-        &.eyes-5 {
-            width:50%;
-        }
-        &.eyes-4 {
-            width:40%;
-        } 
-        &.eyes-3 {
-            width:30%;
-        } 
-        &.eyes-2 {
-            width:20%;
-        } 
-        &.eyes-1 {
-            width:10%;
-        } 
     }
 
     div.nose {
         display:block;
         margin:0 auto;
         height:25px;
-        width:4%;
-        background:#727272;
+        width:6%;
+        background:darkred;
+        opacity:0.5;
+        transition:all 1s ease;
 
+        &.size-5 {
+            width:22%;
+            height:40px;
+        }
+        &.size-4 {
+            width:14%;
+            height:30px;
+        }
+        &.size-3 {
+            width:6%;
+        } 
+        &.size-2 {
+            width:3%;
+            height:20px;
+        } 
+        &.size-1 {
+            width:1.5%;
+            height:15px;
+        } 
+        &.size-0 {
+            visibility:hidden;
+        } 
+
+
+    }
+    div.lips {
+        display: block;
+        margin: 0 auto;
+        border-bottom: solid 15px #000;
+        width: 75%;
+        border-radius: 100%;
+        height: 130px;
+        margin-top: -35px;
     }
 }
 
