--- a/app/views/items/Sunshine.html
+++ b/app/views/items/Sunshine.html
@@ -1,4 +1,31 @@
-<div class="test2">
-    My object thing - 
-    <h1>Sunshine!</h1>
+<div class="col-md-6 col-md-offset-1" style="text-align:center;padding-bottom:40px;">
+
+	<div class="{{itemName}}">
+		
+		<div class="sunRotation">
+	    <div class="sun"></div>
+	    <div class="ray opacity"></div>
+	    <div class="ray2 opacity"></div>
+	    <div class="ray3 opacity"></div>	
+	    <div class="ray4 opacity"></div>		
+	   </div>	
+
+
+
+	</div>
+	<p style="color:#9C9C9C;">Temporarily borrowed from: <a  style="color:#9C9C9C;text-decoration:underline;" href="http://halls-of-valhalla.org/beta/codes/pure-css3-sun,43/">http://halls-of-valhalla.org/beta/codes/pure-css3-sun,43/<a/></p>
+</div>
+
+<div class="col-md-3 col-md-offset-2" style="border:;text-align:center;padding-bottom:40px;">
+  <h4>Adjust things here</h4>
+  <br/>
+  <ul>
+		<li>rotation on/off, speed</li>
+		<li>sun size</li>
+		<li>brightness</li>
+		<li>Smiley face sun?</li>
+	</ul>
+
+
+
 </div>
