--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
     background: #f8f8f8;
     margin: 0;
     padding: 20px 0;
-    margin-bottom: 40px;">Random happy things with CSS</h1>
+    margin-bottom: 40px;">Random happy things with CSS (POC)</h1>
 </div>
 
 
