--- a/app/views/items/Smile.html
+++ b/app/views/items/Smile.html
@@ -1,70 +1,47 @@
-<div class="col-md-6 col-md-offset-1" style="text-align:center;padding-bottom:40px;">
-
+<div class="col-md-6 col-md-offset-1">
 	<div class="{{itemName}}">
-	    
 	  <div ng-model="eyeSize" class="topEyes size-{{eyeSize}}">
 	    <div class="eye left"></div>
 	    <div class="eye right"></div>
 	  </div>
-	  
 	  <div ng-modal="{{noseSize}}" class="nose size-{{noseSize}}"></div>
-
 	  <div ng-model="smileLoudness" class="lips loudness-{{smileLoudness}}"></div>
-
-
 	</div>
 </div>
 
-<div class="col-md-3 col-md-offset-2" style="border:;text-align:center;padding-bottom:40px;">
+<div class="col-md-3 col-md-offset-2 box">
   <h4>Adjust something</h4>
-  <br/>
 
 		<div class="adjustments">
+			<form class="ng-pristine ng-valid">
+				<label ng-model="eyeSize">Eye size ({{eyeSize}}/10)</label>
+        <input type="range" ng-model="eyeSize" min="1" max="10" value="4">
 
-				<form class="ng-pristine ng-valid">
-						<label ng-model="eyeSize">Eye size ({{eyeSize}}/10)</label>
-						<br/>
-		        <input type="range" ng-model="eyeSize" min="1" max="10" value="4">
+        <label ng-model="noseSize">Nose? ({{noseSize}}/5)</label>
+        <input type="range" ng-model="noseSize" min="0" max="5" value="1">
 
-<br/>
-<br/>
-
-		        <label ng-model="noseSize">Nose size ({{noseSize}}/5)</label>
-						<br/>
-		        <input type="range" ng-model="noseSize" min="0" max="5" value="3">
-
-<br/>
-<br/>
-
-		        <label ng-model="smileLoudness">Smile Loudness</label>
-						<br/>
-
-						<label ng-model="smileLoudness" style="font-weight:normal;">Regular</label>
-		        <input type="checkbox" ng-model="smileLoudness" ng-true-value="regularHappy">
-		        <span style="margin:0 5px;width:1px;height:20px;background:#CCC;
+        <label ng-model="smileLoudness">Smile Loudness</label>
+				<label ng-model="smileLoudness" style="font-weight:normal;">Regular</label>
+        <input type="checkbox" ng-model="smileLoudness" ng-true-value="regularHappy">
+        <span style="margin:0 5px;width:1px;height:20px;background:#CCC;
 background: #aaa;
 display: inline-block;
 vertical-align: middle;"></span>
-		        <label ng-model="smileLoudness" style="font-weight:normal;">Super</label>
-		        <input type="checkbox" ng-model="smileLoudness" ng-true-value="superHappy">
-		        <br/>
-
-<br/>
-<br/>
-<p>More stuff here like...</p> 
-<ul>
-	<li>pupils</li>
-	<li>blinking</li>
-	<li>hair/beard things</li>
-	<li>winking</li>
-	<li>teeth</li>
-	<li>colour schemes?</li>
-	<li>stuff like this</li>
-</ul>
-
-
-		    </form>   
-
-
+        <label ng-model="smileLoudness" style="font-weight:normal;">Super</label>
+        <input type="checkbox" ng-model="smileLoudness" ng-true-value="superHappy">
+        <br/>
+				<br/>
+				<br/>
+				<p>More stuff here like...</p> 
+				<ul>
+					<li>pupils</li>
+					<li>blinking</li>
+					<li>hair/beard things</li>
+					<li>winking</li>
+					<li>teeth</li>
+					<li>colour schemes?</li>
+					<li>stuff like this</li>
+				</ul>
+	    </form>
 		</div>
 	</div>	
