--- a/app/views/items/Sunshine.html
+++ b/app/views/items/Sunshine.html
@@ -1,23 +1,28 @@
-<div class="col-md-6 col-md-offset-1">
+<div class="col-md-9">
 	<div class="{{itemName}}">
 		<div class="sunRotation">
 	    <div class="sun"></div>
 	    <div class="ray opacity"></div>
 	    <div class="ray2 opacity"></div>
 	    <div class="ray3 opacity"></div>	
-	    <div class="ray4 opacity"></div>		
+	    <div class="ray4 opacity"></div>
 	   </div>
 	</div>
 	<p style="color:#9C9C9C;">Temporarily borrowed from: <a style="color:#9C9C9C;text-decoration:underline;" href="http://halls-of-valhalla.org/beta/codes/pure-css3-sun,43/">http://halls-of-valhalla.org/beta/codes/pure-css3-sun,43/<a/></p>
 </div>
 
-<div class="col-md-3 col-md-offset-2 box">
-  <h4>Adjust things here</h4>
-  <br/>
-  <ul>
-		<li>rotation on/off, speed</li>
-		<li>sun size</li>
-		<li>brightness</li>
-		<li>Smiley face sun?</li>
-	</ul>
-</div>
+
+<div class="col-md-4">
+	<div class="box">
+	  <h2>Adjustments</h2>
+			<div class="inner">
+				<small>To be continued...</small>
+				<ul>
+					<li>rotation on/off, speed</li>
+					<li>sun size</li>
+					<li>brightness</li>
+					<li>Smiley face sun?</li>
+				</ul>
+			</div>
+		</div>
+	</div>
