--- a/app/views/items/smiley-face.html
+++ b/app/views/items/smiley-face.html
@@ -1,5 +1,5 @@
 <div class="col-md-8">
-	<div class="BLA {{name}}">
+	<div class="{{itemId}}">
 	  <div ng-model="eyeSize" class="topEyes size-{{eyeSize}}">
 	    <div class="eye left"></div>
 	    <div class="eye right"></div>
