--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,41 +1,25 @@
-<div class="header">
-  <h1>Random happy things with CSS (POC)</h1>
+<div class="row header">
+  <h1>Random happy things with CSS</h1>
 </div>
+<div class="row mainContent">
+	<div class="inner">
+		<div class="col-md-3 leftContainer">
+			<div class="box objectSelection">
+			  <h2>Select something</h2>
+			  <div ng-repeat="item in happyThings" ng-click="activateItem(item.id);setSelectedCategory(item.id);" ng-class="{active: selectedCategory == item.id}">
+			  	<div>{{item.name}}</div>
+			  </div>
+		  </div>
+		</div>
 
+		<div class="col-md-9 rightContainer">
+		  <div class="row happyObject" ng-if="itemId == false">
+		    <p>Waiting for something happy...</p>
+		  </div>
+		  <div class="row happyObject {{itemId}}" ng-if="itemId != false">
+		    <ng-include src="itemTemplate()"></ng-include>
+		  </div>
+		</div>
 
-
-
-
-<br/>
-
-<div class="col-md-2 box">
-  <h4>Select something</h4>
-  <br/>
-<div ng-repeat="item in happyThings" style="clear:both;margin:15px 0;"
-         ng-click="activateItem(item.name);" ng-model="smile">
-      {{item.name}}
-      <input type="checkbox" />
-
-    </div> 
+	</div>
 </div>
-
-<div class="col-md-9 col-md-offset-1" style="text-align:center;padding-bottom:40px;">
-  <!--<h2>{{happyThings.name}}</h2>-->
-  <div class="row happyObject" ng-if="itemName == false" style="border:0 none;">
-    <p style="color:#D6D6D6;">Waiting for something happy...</p>
-  </div>
-
-  <div class="row happyObject {{itemName}}" ng-if="itemName != false">
-    <ng-include src="itemTemplate()"></ng-include>
-  </div>
-
-
-  <br/>
-</div>
-
-
-
-
-
-
-
