--- a/app/views/items/Balloons.html
+++ b/app/views/items/Balloons.html
@@ -1,7 +1,16 @@
 <div class="col-md-9">
 	<div class="{{itemName}}">
 		<div class="balloons">
-			<p>stuff here</p>
+			<div class="balloon ballA">
+				<div class="main"></div>
+			</div>
+			<div class="balloon ballB">
+				<div class="main"></div>
+			</div>
+			<div class="balloon ballC">
+				<div class="main"></div>
+			</div>
+
 	   </div>
 	</div>
 </div>
