--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,6 +11,8 @@
 body {
 	font-family:'Merriweather Sans', sans-serif;
 	color:#3C4B3F;
+	height:100%;
+	overflow-x:hidden;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -42,6 +44,7 @@ input[type="checkbox"] {
 
 .container {
   width:100%;
+  height:100%;
   max-width:100%;
 }
 
@@ -138,3 +141,4 @@ div.happyObject {
 //happy items
 @import 'smiley-face';
 @import 'sunshine';
+@import 'balloons';
