--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -70,7 +70,7 @@ h4, .h4 {
   margin-bottom:40px;
 }
 
-/*object selection/nav toggle button*/
+//object selection/nav toggle button
 .navbar-toggle {
 	float:left;
 	background:$greenMedium;
@@ -123,7 +123,7 @@ h4, .h4 {
 	}
 }
 
-/*left/right box widths*/
+//left/right box widths
 .leftContainer .box,
 .rightContainer .col-md-4 {
 	max-width:187px;
