--- a/app/styles/media-queries.scss
+++ b/app/styles/media-queries.scss
@@ -1,10 +1,5 @@
 @import 'base';
 
-@media (max-width:600px) {
-
-
-}
-
 @media (min-width:600px) {
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
 		float:left;
@@ -17,28 +12,29 @@
 		.col-md-8 {
 			width:66.66666666666666%;
 		}
-		.col-md-4 {			height:100%;
+		.col-md-4 {
+			height:100%;
 			width:33.33333333333333%;
 		}
 	}
 }
 
 @media (min-width:851px) {
-	/*item specifics*/
+	//item specifics
 	div.happyObject {
 		.smiley-face {
 			width:60vh;
 			max-width:400px;
 		  max-height:380px;
 		}
-	}	
+	}
 }
 
 @media (max-width:850px) {
 	.header h1 {
 		margin-bottom:15px;
 	}
-	/*item specifics*/
+	//item specifics
 	div.happyObject {
 		.smiley-face {
 			width:100%;
@@ -62,7 +58,6 @@
 		.col-md-4 {
 			padding-right:0;
 		}
-
 	}
 }
 
