--- a/app/styles/smiley-face.scss
+++ b/app/styles/smiley-face.scss
@@ -1,34 +1,22 @@
 @import 'base';
 
 @keyframes headShake {
-	/*
-	from {transform:rotate(0);min-height:270px;width:100%;opacity:1;}
-	 85% {transform:rotate(0);min-height:270px;width:100%;opacity:1;}
-	 90% {transform:rotate(-4deg);min-height:265px;width:95%;opacity:1;}
-	 95% {transform:rotate(4deg);min-height:260px;width:90%;opacity:0.9;}
-	 96% {transform:rotate(0);min-height:270px;width:100%;opacity:1;}
-	 to {transform:rotate(0);min-height:270px;width:100%;}
-	 */
-
-	 from {transform:rotate(0);}
-	 96% {transform:rotate(0);}
-	 97% {transform:rotate(-4deg);}
-	 98% {transform:rotate(4deg);}
-	 99% {transform:rotate(0);}
-	 to {transform:rotate(0);}
-	 
-
+  from {transform:rotate(0);}
+  96% {transform:rotate(0);}
+  97% {transform:rotate(-4deg);}
+  98% {transform:rotate(4deg);}
+  99% {transform:rotate(0);}
+  to {transform:rotate(0);}
 }
 
 @keyframes blinking {
-    from { opacity: 0; }
-    10% { opacity: 1; }
-    to { opacity: 1; }
+  from { opacity: 0; }
+  10% { opacity: 1; }
+  to { opacity: 1; }
 }
 
-
 div.happyObject .smiley-face {
-	min-height:200px;
+  min-height:200px;
   margin:0 auto;
   border:solid 6px $black;
   border-radius:50%;
@@ -88,53 +76,46 @@ div.happyObject .smiley-face {
     }
     &.size-4 {
         width:50%;
-        /*.eye {height:75%;}*/
-    } 
+    }
     &.size-3 {
         width:45%;
-        /*.eye {height:75%;}*/
-    } 
+    }
     &.size-2 {
         width:40%;
-        /*.eye {height:75%;}*/
-    } 
+    }
     &.size-1 {
         width:35%;
-        /*.eye {height:75%;}*/
-    } 
+    }
 
     div.eye {
         display:inline-block;
         border-radius:50%;
         background:$black;
         width:21%;
-        /*min-height:30px;
-        height:100%;
-        */
         height:50%;
         margin:0 5%;
         transition:all 1s ease;
 
-        /*blinking*/
-		    &::before {
-		    	content:'';
-		    	display:inline-block;
-		    	vertical-align:middle;
-		    	background:#F6F6F6;
-		    	width:13%;
-		    	min-height:5px;
-		    	margin-top:6%;
-		    	border-radius:50%;
-		    	transition:all 0.3s ease;
-		    	animation:blinking 6s;
-		    	animation-iteration-count:infinite;
-		    }
+        //blinking
+        &::before {
+          content:'';
+          display:inline-block;
+          vertical-align:middle;
+          background:#F6F6F6;
+          width:13%;
+          min-height:5px;
+          margin-top:6%;
+          border-radius:50%;
+          transition:all 0.3s ease;
+          animation:blinking 6s;
+          animation-iteration-count:infinite;
+        }
 
         &.left {
-            left:0;
+          left:0;
         }
         &.right {
-            right:0;
+          right:0;
         }
     }
 }
@@ -160,18 +141,18 @@ div.nose {
     }
     &.size-3 {
         width:6%;
-    } 
+    }
     &.size-2 {
         width:3%;
         height:20px;
-    } 
+    }
     &.size-1 {
         width:1.5%;
         height:15px;
-    } 
+    }
     &.size-0 {
         visibility:hidden;
-    } 
+    }
 
 
 }
@@ -182,7 +163,6 @@ div.lips {
     border-top:0 none;
     width: 75%;
     border-radius:0 0 130px 130px / 0 0 100px 100px;
-    /*height: 40%;*/
     padding:18% 0;
     margin:15px auto 20px auto;
     transition:all 1s ease;
