--- a/app/views/items/Balloons.html
+++ b/app/views/items/Balloons.html
@@ -10,6 +10,9 @@
 			<div class="balloon ballC">
 				<div class="main"></div>
 			</div>
+			<div class="balloon ballE">
+				<div class="main"></div>
+			</div>
 
 	   </div>
 	</div>
